samples/_failures_safe/1761071723_e7ddb8_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1b08f13c.c: In function ‘main’:
./samples/SAFE/__tmp_1b08f13c.c:173:9: error: expected declaration or statement at end of input
  173 |         return 1;
      |         ^~~~~~
./samples/SAFE/__tmp_1b08f13c.c:173:9: error: expected declaration or statement at end of input
